; ModuleID = '/home/carl/AnghaBench/linux/kernel/time/extr_alarmtimer.c_alarm_expires_remaining.c'
source_filename = "/home/carl/AnghaBench/linux/kernel/time/extr_alarmtimer.c_alarm_expires_remaining.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.alarm_base = type { i32 (...)* }
%struct.alarm = type { i64, %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }

@alarm_bases = common dso_local global %struct.alarm_base* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @alarm_expires_remaining(%struct.alarm* %0) #0 {
  %2 = alloca %struct.alarm*, align 8
  %3 = alloca %struct.alarm_base*, align 8
  store %struct.alarm* %0, %struct.alarm** %2, align 8
  %4 = load %struct.alarm_base*, %struct.alarm_base** @alarm_bases, align 8
  %5 = load %struct.alarm*, %struct.alarm** %2, align 8
  %6 = getelementptr inbounds %struct.alarm, %struct.alarm* %5, i32 0, i32 0
  %7 = load i64, i64* %6, align 8
  %8 = getelementptr inbounds %struct.alarm_base, %struct.alarm_base* %4, i64 %7
  store %struct.alarm_base* %8, %struct.alarm_base** %3, align 8
  %9 = load %struct.alarm*, %struct.alarm** %2, align 8
  %10 = getelementptr inbounds %struct.alarm, %struct.alarm* %9, i32 0, i32 1
  %11 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 8
  %13 = load %struct.alarm_base*, %struct.alarm_base** %3, align 8
  %14 = getelementptr inbounds %struct.alarm_base, %struct.alarm_base* %13, i32 0, i32 0
  %15 = load i32 (...)*, i32 (...)** %14, align 8
  %16 = call i32 (...) %15()
  %17 = call i32 @ktime_sub(i32 %12, i32 %16)
  ret i32 %17
}

declare dso_local i32 @ktime_sub(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
